Fix more button layout issues

--- a/src/css/base/global.less
+++ b/src/css/base/global.less
@@ -177,7 +177,7 @@ select {
     height: 54px;
     text-align: center;
     margin: 0 auto;
-    font-size: 4rem;
+    font-size: 2rem;
     padding: 0;
     border: 3px solid rgba(0,0,0,0.125);
     border-radius: @global-radius;
