--- a/src/css/modules/header.less
+++ b/src/css/modules/header.less
@@ -118,7 +118,6 @@
         position: fixed;
         left: 100%;
         right: 1em;
-        font-size: 2rem;
         z-index: @z-index-5;
     }
 
@@ -149,5 +148,4 @@
             }
         }
     }
-
 }
